[project]
name = "pyoso"
version = "0.6.3"
description = ""
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Icaro Guerra", email = "icaro@karibalabs.co" }
]
dependencies = [
    "pandas>=1.2.0",
    "pydantic>=2.10.5",
    "requests>=2.32.4",
    "sqlglot>=26.16.4",
]

[project.optional-dependencies]
semantic = [
    "oso-semantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "oso-semantic",
    "pandas-stubs>=2.2.3.250308",
    "pip>=25.2",
    "pytest-pyodide>=0.58.6",
]

[tool.uv.sources]
oso-semantic = { workspace = true }
