[project]
name = "osoprotobufs"
version = "0.1.0"
description = "Generated protobuf code for oso"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "protobuf==6.33.5",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "osoprotobufs"
module-root = ""